# inbox-sentinel

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  Makefile  README.md  analyze_all_models.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-langchain.txt  requirements.txt  setup.py  test_forward.txt  test_local_server.py
archive/: README.md
archive/original_files/: check_datasets.py  demo_workflow.py  email_preprocessor.py  mcp_logistic_regression.py  mcp_naive_bayes.py  mcp_neural_network.py  mcp_orchestrator.py  mcp_random_forest.py  mcp_server.py  mcp_svm.py  phishing_workflow.py  train_all_models.py  train_models_standalone.py  verify_trained_models.py
archive/test_files/: quick_test.py  test_mcp_servers.py  test_simple.py  test_trained_models.py  test_workflow.py
data/models/: logistic_regression_model.pkl  naive_bayes_model.pkl  random_forest_model.pkl  rl_orchestrator_model.pkl  rl_orchestrator_trained.pkl
data/test_samples/: generate_samples.py  quick_rl_results.json  quick_rl_test.py  quick_rl_training.py  rl_comparison_results.json  rl_orchestrator_demo.py  rl_orchestrator_trained.pkl  save_rl_model.py  test_pipeline.py  test_pipeline_verbose.py  test_results_20250807_202625.json  train_rl_orchestrator.py  train_rl_orchestrator_fixed.py
data/test_samples/legitimate/: legitimate_000.txt  legitimate_001.txt  legitimate_002.txt  legitimate_003.txt  legitimate_004.txt  legitimate_005.txt  legitimate_006.txt  legitimate_007.txt  legitimate_008.txt  legitimate_009.txt  legitimate_010.txt  legitimate_011.txt  legitimate_012.txt  (+187 more)
docs/: CLEAN_STRUCTURE.md  PROJECT_STRUCTURE.md  REFACTORING_SUMMARY.md  TRAINED_MODELS.md
examples/: demo_analyze.py  langchain_orchestration_demo.py  list_mcp_servers.py  orchestration_comparison.py
inbox_sentinel/: __init__.py  cli.py
inbox_sentinel/config/: __init__.py  model_config.py  settings.py
inbox_sentinel/core/: __init__.py  base_detector.py  constants.py  exceptions.py  orchestrator.py  types.py
inbox_sentinel/ml/: __init__.py  preprocessing.py
inbox_sentinel/orchestration/: __init__.py  langchain_orchestrator.py  rl_orchestrator.py
inbox_sentinel/scripts/: __init__.py  train_models.py
inbox_sentinel/servers/: __init__.py
inbox_sentinel/utils/: email_parser.py  pickle_compat.py
scripts/: fix_model_imports.py  inspect_models.py
testfiles/: email.txt
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_models_on_dataset.py  test_servers.py  test_spam_detection.py
tests/unit/: __init__.py  test_mcp_model_loading.py  test_mcp_server.py
(+816 files in other folders)
